MARP-3842 Handle Sonar